<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggleButton"
        android:text="現在位置に爆弾を設置する"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggleButton"
        android:layout_marginLeft="200dp"
        android:text="爆弾を解除する"
        android:id="@+id/removebutton"
        />

    <ToggleButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textOn="@string/text_on"
        android:textOff="@string/text_off"
        android:id="@+id/toggleButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toggleButton"
        android:text="@string/eltime"
        android:id="@+id/textView1"
        />
    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:format="@string/chronometer_format"
        android:layout_toRightOf="@+id/textView1"
        android:layout_marginLeft="4dp"
        android:layout_alignBaseline="@+id/textView1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/chronometer"
        android:text="@string/distance"
        android:id="@+id/textView2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginLeft="4dp"
        android:textStyle="bold"
        android:text="0.000km"
        android:id="@+id/disText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toggleButton"
        android:layout_below="@+id/textView2"
        android:text="@string/position"
        android:id="@+id/textView4"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView4"
        android:layout_below="@+id/textView2"

        android:text="ここに住所を表示"
        android:id="@+id/address"
        />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_below="@+id/toggleButton"
        android:layout_marginTop="50dp"
        tools:context=".MapsActivity" />

</RelativeLayout>